# gnuradio4-core

./: .all-contributorsrc  .zenodo.json  CITATION.cff  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  CORE_DEVELOPMENT_GUIDELINE.md  CORE_NAMING_GUIDELINE.md  DEVELOPMENT.md  INSTALL.md  README.md
.github/ci-tools/: build-summary.sh  common.bash  setup_cmake_cache_flags.bash
.github/docker/: Dockerfile.sdk
.github/workflows/: ci-macos.yml  ci-main.yml  ci.yml  cpack.yml  sdk-image.yml  single-header.yml
algorithm/test/: qa_DataSetEstimators.cpp
blocklib_generator/: CMakeLists.txt  GnuRadioBlockLibConfig.cmake.in  GnuRadioBlockLibMacros.cmake.in
blocks/basic/include/gnuradio-4.0/basic/: PythonInterpreter.hpp
blocks/basic/test/: qa_SyncBlock.cpp
blocks/sdr/include/gnuradio-4.0/sdr/: RTL2832Source.hpp
blocks/sdr/src/: ex_RTL2832_capture.cpp
blocks/sdr/test/: qa_RTL2832Source.cpp  qa_SoapyRaiiWrapper.cpp
blocks/timing/src/: ex1_gps_receiver_gr4.cpp
blocks/timing/test/: qa_GpsSource.cpp  qa_PpsSource.cpp
cmake/: CPackConfig.cmake  GnuRadioTestHelpers.cmake  gnuradio4.pc.in  gnuradio4Config.cmake.in  lsan_suppressions.supp
core/: CMakeLists.txt
core/benchmarks/: CMakeLists.txt  bm_sync.cpp
core/include/gnuradio-4.0/: BlockRegistry.hpp  Graph_yaml_importer.hpp  Plugin.hpp  PluginLoader.hpp  Profiler.hpp  Tag.hpp  TriggerMatcher.hpp
core/include/gnuradio-4.0/thread/: thread_affinity.hpp
core/src/: Block.cpp  BlockModel.cpp  CMakeLists.txt  Settings.cpp
core/test/: CMakeLists.txt  qa_ManagedSubGraph.cpp  qa_MemoryAllocators.cpp  qa_PluginLoader.cpp  qa_SubGraphAssets.cpp  qa_TriggerMatcher.cpp  qa_UnmanagedSubGraph.cpp  qa_thread_affinity.cpp
core/test/plugins/: CMakeLists.txt  qa_plugin.cpp
devtools/: singleheader-config-graph.json
docker/: Dockerfile
docs/: CORE_REPOSITORY_SPLIT.md  USER_API_Block_Development.md
docs/ci/: sdk-image.md
meta/: README.md
test_external/: run_installed_sdk_smoke.sh
test_external/minimal_blocklib/: CMakeLists.txt
test_external/minimal_blocklib/include/minimal_blocklib/: Gain.hpp
test_external/minimal_blocklib/src/: consumer.cpp  minimal_blocklib.cpp
