if(NOT EMSCRIPTEN)
  function(add_gr_benchmark BM_NAME)
    add_benchmark(${BM_NAME})
    target_link_libraries(
      ${BM_NAME}
      PRIVATE gnuradio-options
              gnuradio-core
              gnuradio-blocklib-core
              ut
              ut-benchmark)
    if(NOT EMSCRIPTEN AND INTERNAL_ENABLE_BLOCK_PLUGINS)
      target_link_libraries(${BM_NAME} PRIVATE gnuradio-plugin)
    endif()
    if(EMSCRIPTEN) # performance benchmarks should be optimised
      target_compile_options(${BM_NAME} PRIVATE -O3)
    else()
      target_compile_options(${BM_NAME} PRIVATE -O3 -march=native)
    endif()

    target_include_directories(${BM_NAME} PRIVATE "../test")
  endfunction()

  add_gr_benchmark(bm_Buffer)
  add_gr_benchmark(bm_HistoryBuffer)
  add_gr_benchmark(bm_Profiler)
  add_gr_benchmark(bm_tensor)
  add_gr_benchmark(bm_portLimits)
  message(STATUS "Skipping standard-block/algorithm benchmarks in gnuradio4-core")
endif()
